--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<h1 id= "title">Late Pastor Chijioke Apostle Eze</h1>
 					<p>Pastor and Founder of Alpha Covenant Church</p>
 				<figure id="img-div">
-      <img src="images/Chijioke_Apostle_Eze1.jpg" alt="Pastor Eze"> 
+      <img id="image" src="images/Chijioke_Apostle_Eze1.jpg" alt="Pastor Eze"> 
       <figcaption id="img-caption"> Pastor Eze on his last birthday celebration before his death</figcaption>   
         </figure>
         
@@ -34,7 +34,7 @@
 			
       <section id="tribute-info">
 
-							<h3>A Brief Timeline of His Adorable Life</h3>
+							<h3 id="headline">A Brief Timeline of His Adorable Life</h3>
 				<ul>
           <li><strong>1952</strong> - He was born Eastern Nigeria in the town of Agburuike Nsulu in what is today known as Isiala Ngwa in Abia State </li>
           <li>
@@ -77,6 +77,24 @@
             <strong>2018</strong> - he dies at the age of 70
           </li>
         </ul>
+	      
+	      <br>
+	      <blockquote
+          cite="http://supapraisekb.blogspot.com"
+        >
+          <p>
+            "Pastor was a man that lived to pleae God all the days of his life"
+          </p>
+          <cite>-- Rev. Dr Uma Ukpai (2018)</cite>
+        </blockquote>
+        <br>
+        More on the Life and times of Pastor C.A Eze can be found here:
+        <a
+            id="tribute-link"
+            href=""
+            target="_blank"
+            >My Blog Entry</a
+          >.
         </section>
 <figure id="img-div">
         <img
