--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lora:ital,wght@1,500&family=Montserrat:wght@100&family=Oleo+Script:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
